--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-profile-app",
   "version": "0.1.0",
-  "homepage": "http//salest.github.io/salest.github.io_2",
+  "homepage": "https://salest.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
